src/objects/agf__ADM_Feature_Freeze_Exception_Request__c.object
<CustomObject>
    <description>Feature Freeze exception request for incomplete features.</description>
    <fields>
        <fullName>agf__Code_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Code checked in and follows department standards.</description>
        <inlineHelpText>Code checked in and follows department standards.</inlineHelpText>
        <label>Code Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Code_Coverage_Percentage__c</fullName>
        <description>Code coverage for this feature.</description>
        <inlineHelpText>Code coverage for this feature.</inlineHelpText>
        <label>Code Coverage Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>agf__Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__DB_Upgrade_Script_Complete__c</fullName>
        <inlineHelpText>Database scripts are complete and incorporated into database upgrade process.</inlineHelpText>
        <label>DB Upgrade Scripts Complete and Verified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>False</fullName>
                    <default>true</default>
                    <label>False</label>
                </value>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Documentation_Complete__c</fullName>
        <description>User documentation complete and checked in.</description>
        <inlineHelpText>User documentation complete and checked in.</inlineHelpText>
        <label>Documentation Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>False</fullName>
                    <default>true</default>
                    <label>False</label>
                </value>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Effort_to_Disable_Feature__c</fullName>
        <description>What effort is required to backout/disable the functionality and ensure the code line is potentially releasable?</description>
        <inlineHelpText>What effort is required to backout/disable the functionality and ensure the code line is potentially releasable?</inlineHelpText>
        <label>Effort to Disable Feature</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Exception_Complete__c</fullName>
        <description>The date the scrum team marked the exception as complete.</description>
        <inlineHelpText>The date the scrum team marked the exception as complete.</inlineHelpText>
        <label>Exception Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Feature_Freeze_Status__c</fullName>
        <label>Feature Freeze Status</label>
        <referenceTo>agf__ADM_Feature_Freeze_Status__c</referenceTo>
        <relationshipName>R00NT0000000txXxMAI</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>agf__Feature_Name__c</fullName>
        <defaultValue>&quot;Overall Status&quot;</defaultValue>
        <description>Feature name</description>
        <inlineHelpText>Feature name</inlineHelpText>
        <label>Feature Name or Overall Status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__List_of_Showstopper_Bugs__c</fullName>
        <description>List SHOWSTOPPER bugs and when they will be fixed and tested.</description>
        <inlineHelpText>List SHOWSTOPPER bugs and when they will be fixed and tested.</inlineHelpText>
        <label>List of Showstopper Bugs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Localization_Complete__c</fullName>
        <description>All UI labels ready for localization vendors.</description>
        <inlineHelpText>All UI labels ready for localization vendors.</inlineHelpText>
        <label>UI Labels Ready for Localization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>False</fullName>
                    <default>true</default>
                    <label>False</label>
                </value>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Major_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Major Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Num_P2_Bugs_TF_to_Fix_Verify__c</fullName>
        <inlineHelpText>Number of  Bugs and Test Failures to Fix.</inlineHelpText>
        <label>Num of Bugs/TF to Verify</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Num_of_P1_Bugs_TF_to_be_Fixed_Verified__c</fullName>
        <inlineHelpText>Number of P1 bugs and test failures to be fixed or verified.  DoD criterion is 0.  FF criterion is no more than 1.</inlineHelpText>
        <label>Num of Bugs/TF to Fix</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Blocking_Bugs__c</fullName>
        <description>Number of BLOCKING, RELEASE BLOCKING, or FEATURE BLOCKING bugs that are not Verified and Closed.</description>
        <inlineHelpText>Number of BLOCKING, RELEASE BLOCKING, or FEATURE BLOCKING bugs that are not Verified and Closed.</inlineHelpText>
        <label>Number of P0/Blocking Bugs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_Open_Regressions__c</fullName>
        <description>Number of open regressions for this feature. Automated tests written and reviewed for all closed regressions.</description>
        <inlineHelpText>Number of open regressions for this feature. Automated tests written and reviewed for all closed regressions.  DoD criterion is 0.</inlineHelpText>
        <label>Number of Open Regressions</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Number_of_P1_P2_Bugs__c</fullName>
        <description>Number of P1 and P2 bugs for this feature that are not verified and closed.</description>
        <inlineHelpText>Number of P1 and P2 bugs for this feature older than one week that are not verified and closed.  FF criterion is 0.</inlineHelpText>
        <label>Number of TF &gt; 1 Week</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Percent_Test_Cases_Automated__c</fullName>
        <inlineHelpText>Percent of test cases that are automated. DoD criterion is 70%.</inlineHelpText>
        <label>Percent Test Cases Automated</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>agf__Plan_if_Exception_Denied__c</fullName>
        <description>What are the options if this exception request is not approved?</description>
        <inlineHelpText>What are the options if this exception request is not approved?</inlineHelpText>
        <label>Plan if Exception Denied</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Plan_to_Complete_by_Release_Freeze__c</fullName>
        <description>What is the plan – including dates and owners – to complete this work and the Release Sprint activities by Release Freeze?</description>
        <inlineHelpText>What is the plan – including dates and owners – to complete this work and the Release Sprint activities by Release Freeze?</inlineHelpText>
        <label>Plan to Complete by Release Freeze</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Product_Metrics_Defined__c</fullName>
        <description>Metrics to concretely measure customer usage of the sprint functionality have been defined and New Metric Request has been filed for any metrics not yet in the data warehouse.</description>
        <inlineHelpText>Metrics to concretely measure customer usage of the sprint functionality have been defined and New Metric Request has been filed for any metrics not yet in the data warehouse.  See  http://wikiforce.soma.salesforce.com/pmwiki.php/Main/ProductMetrics</inlineHelpText>
        <label>Product Metrics Defined</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>False</fullName>
                    <default>true</default>
                    <label>False</label>
                </value>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__R_D_Exec_Approved__c</fullName>
        <description>The date the R&amp;D Exec Team signed off on Feature Freeze.</description>
        <inlineHelpText>The date the R&amp;D Exec Team signed off on Feature Freeze.</inlineHelpText>
        <label>R&amp;D Exec Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>agf__Remaining_Work__c</fullName>
        <description>What remains to meet Feature Freeze criteria?</description>
        <inlineHelpText>What remains to meet Feature Freeze criteria?</inlineHelpText>
        <label>Remaining Work</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>agf__Security_Standards_Met__c</fullName>
        <description>Security Standards met and critical issues resolved.</description>
        <inlineHelpText>Security Standards met and critical issues resolved.</inlineHelpText>
        <label>Security Standards Met</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>False</fullName>
                    <default>true</default>
                    <label>False</label>
                </value>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__SysTest_Status__c</fullName>
        <description>Performance/scalability impact ascertained and sys testing scheduled/completed if required.</description>
        <inlineHelpText>Performance/scalability impact ascertained and sys testing scheduled/completed if required.</inlineHelpText>
        <label>SysTest Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unscheduled</fullName>
                    <default>true</default>
                    <label>Unscheduled</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Test_Cases_Passing_Percentage__c</fullName>
        <description>Percent of test cases passing.</description>
        <inlineHelpText>Percent of test cases passing.  DoD criterion is 100% for P1/P2 cases.</inlineHelpText>
        <label>Test Cases Passing Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>agf__Usability_Testing_Complete__c</fullName>
        <description>Usability testing has been completed, with all resulting P1 and P2 UI issues fixed.</description>
        <inlineHelpText>Usability testing has been completed, with all resulting P1 and P2 UI issues fixed.</inlineHelpText>
        <label>Usability Testing Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>False</fullName>
                    <default>true</default>
                    <label>False</label>
                </value>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__User_Experience_Complete__c</fullName>
        <description>UE has reviewed any new features; P1 and P2 UI bugs fixed.</description>
        <inlineHelpText>UE has reviewed any new features; P1 and P2 UI bugs fixed.</inlineHelpText>
        <label>User Experience Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>False</fullName>
                    <default>true</default>
                    <label>False</label>
                </value>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__X508_Compliance_Complete__c</fullName>
        <description>Code and the UI have been reviewed to ensure 508 compliance and features that cannot be made compliant have been brought to the attention of the UE team.</description>
        <inlineHelpText>Code and the UI have been reviewed to ensure 508 compliance and features that cannot be made compliant have been brought to the attention of the UE team.  See the compliance checklist:  http://wikiforce/pmwiki.php/Main/Accessibility508.</inlineHelpText>
        <label>508 Compliance Complete</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>False</fullName>
                    <default>true</default>
                    <label>False</label>
                </value>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__delete_me__c</fullName>
        <label>delete me</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <label>Feature Freeze Exception Request</label>
    <nameField>
        <displayFormat>FFD-{0000}</displayFormat>
        <label>Feature Freeze Exception Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feature Freeze Exception Request</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>agf__Code_Coverage_Percentage_0_to_100</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
    agf__Code_Coverage_Percentage__c &gt; 1.0,
    agf__Code_Coverage_Percentage__c  &lt; 0.0
)</errorConditionFormula>
        <errorDisplayField>agf__Code_Coverage_Percentage__c</errorDisplayField>
        <errorMessage>Percentage must be between 0 and 100</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>agf__Test_Case_Pass_Percentage_0_to_100</fullName>
        <active>true</active>
        <errorConditionFormula>OR( 
     agf__Test_Cases_Passing_Percentage__c  &gt; 1.0,
     agf__Test_Cases_Passing_Percentage__c  &lt; 0.0
)</errorConditionFormula>
        <errorDisplayField>agf__Test_Cases_Passing_Percentage__c</errorDisplayField>
        <errorMessage>Percentage must be between 0 and 100</errorMessage>
    </validationRules>
</CustomObject>